:sparkleS: Feat: 공연, 공연장 responseDto에 평균평점, 리뷰개수 필드 추가